背景動かす系のエフェクトつくった

--- a/index.html
+++ b/index.html
@@ -184,6 +184,18 @@
                   <input type="checkbox" class="JS_effect" value="effect_neon">
                   ネオン
                 </label>
+                <label class="checkbox-inline">
+                  <input type="checkbox" class="JS_effect" value="effect_river">
+                  川
+                </label>
+                <label class="checkbox-inline">
+                  <input type="checkbox" class="JS_effect" value="effect_yabai">
+                  やばい
+                </label>
+                <label class="checkbox-inline">
+                  <input type="checkbox" class="JS_effect" value="effect_timeMachine">
+                  タイムマシン
+                </label>
               </p>
             </div>
             <div id="JS_details" style="display: none">
