ストライプ チリチリ 川 めまい タイムマシンを追加

--- a/index.html
+++ b/index.html
@@ -185,12 +185,20 @@
                   ネオン
                 </label>
                 <label class="checkbox-inline">
+                  <input type="checkbox" class="JS_effect" value="effect_stripe">
+                  ストライプ
+                </label>
+				        <label class="checkbox-inline">
+                  <input type="checkbox" class="JS_effect" value="effect_tiritiri">
+                  チリチリ
+                </label>
+                <label class="checkbox-inline">
                   <input type="checkbox" class="JS_effect" value="effect_river">
                   川
                 </label>
                 <label class="checkbox-inline">
-                  <input type="checkbox" class="JS_effect" value="effect_yabai">
-                  やばい
+                  <input type="checkbox" class="JS_effect" value="effect_dizzy">
+                  めまい
                 </label>
                 <label class="checkbox-inline">
                   <input type="checkbox" class="JS_effect" value="effect_timeMachine">
